# KickStarter-Pledge-Analysis

./: README.md  challenge.ipynb  data_cleaning.sqlite3-query  kickstarter.db  kickstarter.ipynb  pyproject.toml
backup_db/: Campaign_table_complete.csv  Flat_campaign.csv  flat_campaign_final.csv
files/: campaign.csv  country.csv
query_files/: data_analysis.sqlite3-query  data_cleaning.sqlite3-query
